# scurve_motion

./: Cargo.toml  LICENSE  README.md
examples/: scurve_plot.rs
src/: buffer_fifo.rs  lib.rs  motion_polynomial.rs  motion_polynomial_executor.rs  scurve.rs  scurve_task.rs
